@@ -213,6 +213,7 @@ rdfe_current_transaction(_) :-
 
 rdfe_commit :-
 	retract(current_transaction(TID)), !,
+	retractall(undo_marker(_, _)),
 	journal(commit(TID)),
 	(   TID = [Id]
 	->  broadcast(rdf_transaction(Id))
@@ -295,7 +296,7 @@ action(object(_)).
 rdfe_undo :-
 	undo_marker(undo, TID), !,
 	(   undo_previous(TID, UnDone)
-	->  retract(undo_marker(undo, TID)),
+	->  retractall(undo_marker(_, _)),
 	    assert(undo_marker(undo, UnDone)),
 	    broadcast(rdf_undo(undo, UnDone))
 	;   fail			% start of undo log
@@ -558,7 +559,7 @@ make_path(File, PWD, Path) :-
 	prolog:message/3,
 	user:message_hook/3.
 
-%	Catch messages.  sgml/4 is generated by the SGML2PL binding.
+%	Catch messages.
 
 prolog:message(rdf_replay_failed(Term)) -->
 	[ 'RDFDB: Replay of ~p failed'-[Term] ].
